test/tests/stages/5_local_variables/invalid_semantics/extra_credit/prefix_decr_non_lvalue.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CAssignment: 
                  CPrefix: 
                  None: 
                  CBinary: 
                    CSubtract: 
                    CConstant: 
                      CConstInt: 
                        TInt: 3
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
